new module addded